# Valkey-rust

./: .env  .env.example  .gitignore  Cargo.toml  Dashmap-multithreaded.txt  README.md  benchmark.sh  build.rs  generate_graphs.py  grpc_client.rs  linux_dependencies.sh  load_test.rs  profiler.rs  run_benchmark.sh  system_monitor  system_monitor.rs
.cargo/: config.toml
asds/: Cargo.toml  analyze_metrics.rs
benchmark/: benchmark.sh  perf_to_bolt.sh  run_benchmark.sh  run_bolt_benchmark.sh
benchmark_logs/: benchmark_getall_1000_20251123_093323.txt  benchmark_getall_100_20251123_041843.txt  benchmark_getall_150_20251123_041843.txt  benchmark_getall_1_20251123_041843.txt  benchmark_getall_200_20251123_041843.txt  benchmark_getall_20_20251123_041843.txt  benchmark_getall_300_20251123_041843.txt  benchmark_getall_400_20251123_041843.txt  benchmark_getall_40_20260409_203659.txt  benchmark_getall_500_20251123_041843.txt  benchmark_getall_50_20251123_041843.txt  benchmark_getall_5_20251123_041843.txt  benchmark_getall_800_20251123_041843.txt  benchmark_getall_800_20251123_093323.txt  benchmark_getpopular_40_20260409_203659.txt  benchmark_getput_40_20260409_203659.txt  benchmark_putall_1000_20251123_093323.txt  benchmark_putall_100_20251123_041843.txt  benchmark_putall_150_20251123_041843.txt  benchmark_putall_1_20251123_041843.txt  benchmark_putall_200_20251123_041843.txt  benchmark_putall_20_20251123_041843.txt  benchmark_putall_300_20251123_041843.txt  benchmark_putall_400_20251123_041843.txt  benchmark_putall_40_20260409_203659.txt  benchmark_putall_500_20251123_041843.txt  benchmark_putall_50_20251123_041843.txt  benchmark_putall_5_20251123_041843.txt  benchmark_putall_800_20251123_041843.txt  benchmark_putall_800_20251123_093323.txt  metrics-getall_1000_20251123_093323.json  metrics-getall_100_20251123_041843.json  metrics-getall_150_20251123_041843.json  metrics-getall_1_20251123_041843.json  metrics-getall_200_20251123_041843.json  metrics-getall_20_20251123_041843.json  metrics-getall_300_20251123_041843.json  metrics-getall_400_20251123_041843.json  metrics-getall_40_20260409_203659.json  metrics-getall_500_20251123_041843.json  (+20 more)
benchmark_logs/bolt_results/: benchmark_getall_40_20260409_203935.txt  benchmark_getpopular_40_20260409_203935.txt  benchmark_getput_40_20260409_203935.txt  benchmark_putall_40_20260409_203935.txt  metrics-getall_40_20260409_203935.json  metrics-getpopular_40_20260409_203935.json  metrics-getput_40_20260409_203935.json  metrics-putall_40_20260409_203935.json
db/: kv_store.db
metrics_analyzer/: Cargo.toml  README.md  benchmark_results.csv
metrics_analyzer/src/: main.rs
migrations/: 20251105140257_init.sql  20251107131856_wal_sync.sql
profiler/: Cargo.toml  README.md
profiler/src/: main.rs
proto/: kvstore.proto
src/: config.rs  constants.rs  db_connection.rs  error.rs  grpc_server.rs  handlers.rs  main.rs  models.rs  wal.rs  wal_manager.rs
