[package]
name = "KVStore"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = false
lto = "fat"
strip = "debuginfo"
opt-level = 3
panic = "abort"

[profile.release-debug]
inherits = "release"
debug = true

[[bin]]
name = "kvstore"
path = "src/main.rs"

[[bin]]
name = "load_test"
path = "benchmark/load_test.rs"


[dependencies]
tokio = { version = "1.48.0", features = ["full", "tracing"] }
axum = "0.8.6"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "postgres", "tls-native-tls", "migrate", "rust_decimal" ] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.9.2"
fastrand = "2.3.0"
chrono = "0.4.42"
anyhow = "1.0.100"
console-subscriber = "0.5.0"
sonic-rs = "0.5.6"
dashmap = { version = "=7.0.0-rc2", features = ["inline-more"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"