[package]
name = "profiler"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.177"
clap = { version = "4.5.53", features = ["derive"] }
sonic-rs = "0.5.6"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
debug = false
lto = "fat"
strip = "debuginfo"
opt-level = 3
panic = "abort"
